# openfree-client

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  TEST_INFRA.md  TEST_READY.md  index.html  package-lock.json  package.json  progress.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  audio.rs  cleanup.rs  config.rs  inject.rs  lib.rs  main.rs  transcribe.rs  whisper.rs
src/components/: Pill.tsx  Settings.tsx
tests/e2e/: debug_e2e.js  fixtures.ts  generate_mock_wav.js  package-lock.json  package.json  playwright.config.ts
tests/e2e/specs/: boundary_cases.spec.ts  cross_features.spec.ts  feature_coverage.spec.ts  real_world.spec.ts
