[package]
name = "openfree-client"
version = "0.1.0"
description = "OpenFree dictation client"
authors = ["you"]
edition = "2021"

[lib]
name = "openfree_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
cpal = "0.15"
hound = "3.5"
enigo = "0.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
arboard = "3"
dirs = "5"
whisper-rs = { version = "0.16", default-features = false }

[features]
default = []
# Build with `cargo tauri build --features gpu` to enable Vulkan GPU acceleration.
gpu = ["whisper-rs/vulkan"]

